correct button alignment

--- a/front-generator/app/styles/partials/_literal.scss
+++ b/front-generator/app/styles/partials/_literal.scss
@@ -15,6 +15,10 @@
     margin-left: auto;
 }
 
+.margin-left-20 {
+    margin-left: 20px !important;
+}
+
 .margin-right-auto {
     margin-right: auto;
 }
@@ -49,4 +53,12 @@ div .margin-top-30 {
 
 .padding-right-5 {
     padding-right: 5px;
+}
+
+.padding-top-12 {
+    padding-top: 10px;
+}
+
+.padding-bottom-12 {
+    padding-bottom: 10px;
 }
